<resources>
    <string name="app_name">MiniProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_bot">Rejoindre une guilde</string>
    <string name="action_list_members">Lister les membres</string>
    <string name="textual_channels">Channels textuels</string>
    <string name="voice_channels">Channels de voix</string>
    <string name="actions_send_message">Envoyer un message</string>
    <string name="send">Envoyer</string>
    <string name="action_disconnect">Se déconnecter</string>
    <string name="action_play_file">Jouer un son</string>
    <string name="action_import_file">Importer un son</string>
    <string name="action_stop_file">Arrêter de diffuser</string>
    <string name="choose_file">Choisir un fichier</string>
    <string name="file_to_convert">Fichier à convertir</string>
    <string name="progress">Progression</string>
    <string name="details">Details</string>
    <string name="file_loaded">Fichier chargé</string>
    <string name="action_voice_disconnect">Quitter le salon vocal</string>
    <string name="none">Aucun</string>
    <string name="file_song_details">Details du fichier</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_placeholder">Rechercher un son</string>
    <string name="search_button">Rechercher</string>
    <string name="start_record">Commencer l\'enregistrement</string>
    <string name="stop_record">Arrêter l\'enregistrement</string>
    <string name="placeholder_filename">Nom du fichier</string>
</resources>
