<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_bot"
        android:orderInCategory="100"
        android:title="@string/action_add_bot"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_list_members"
        android:orderInCategory="100"
        android:title="@string/action_list_members"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_import_file"
        android:orderInCategory="100"
        android:title="@string/action_import_file"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_play_file"
        android:orderInCategory="100"
        android:title="@string/action_play_file"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_stop_file"
        android:orderInCategory="100"
        android:title="@string/action_stop_file"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_disconnect"
        android:orderInCategory="100"
        android:title="@string/action_disconnect"
        app:showAsAction="never" />
</menu>
